2008-02-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-con.cc:
	* src/gnome-cmd-con.h:
	* src/gnome-cmd-dir.cc:
	Fixed problem #449137 (renamed directories not accessed by name)

2008-02-25  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Yet another fix for setting exec dir for started MIME applications

2008-02-23  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/tags/gnome-cmd-tags-file.cc:
	Do not show password in File.Link tag

	* src/gnome-cmd-file-popmenu.cc:
	Revert the bug introduced in rev. #1575

2008-02-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/utils.cc:
	Set proper exec dir for started MIME applications

	* src/gnome-cmd-file-list.cc:
	Fix for RMB selection

2008-02-18  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-bookmark-dialog.cc:
	Allow resizing of bookmark dlg

	* src/Makefile.am:
	* src/gnome-cmd-data.cc:
	* src/utils.cc:
	Fix for problem #448942 (SHIFT+ENTER: running a command in a separate terminal)

2008-02-11  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-app.h:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Simplify error handling for MIME retrieving

2008-02-06  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-file-props-dialog.cc:
	Fix for crash when handling mime for some exotic permissions

2008-01-28  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Simplify code for string handling

2008-01-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	Do not use escaped directory name when runnning editor application

2008-01-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	Run "Open with other..." application in file's directory

2008-01-21  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-dir.cc:
	Fixed problem #510567 (failed assert when deleting dir)

	* src/gnome-cmd-dir.cc: